# CPfinal

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: streamlit_app.py
deploy/: README.md  deploy_sagemaker.py
docs/: 01_TheProduct.md  02_ManufacturingProcess.md  03_CleaningUpData.md  04_DataArchitecture.md  05_PredictiveModel.md  FINAL_PROJECT.md
infra/: .env.example  docker-compose.yml
migrations/: DATABASE.md  README.md
migrations/assets/: schema.dot
migrations/sql/: V001__create_raw_tables.sql  V002__create_pieces_view.sql  V003__fix_pieces_view_cast.sql  V004__create_silver_schema.sql  V005__rename_public_to_bronze.sql  V006__add_oee_to_silver.sql  V007__rename_columns_strike_naming.sql  V008__add_auxiliary_press.sql
models/: model_metadata.json  xgboost_bath_predictor.json
notebooks/: 00_explore_data.ipynb  01_bronze_to_silver.ipynb  02_silver_to_gold.ipynb  03_build_clean_dataset.ipynb  04_analyze_per_matrix.ipynb  05_feature_selection_and_model.ipynb
scripts/: seed.py
solutions/: repos.md
src/vaultech_analysis/: inference.py  start_app.py  start_lab.py
tests/: README.md  test_inference.py  test_sagemaker.py
